
	* lib/distutils.cygclass:
	* lib/pygtk.cygclass:
	* lib/python.cygclass: Python 2.5 upgrade.

	* lib/pygtk.cygclass: Honour predefined ORIG_PN.

	* bin/cygport.in (cygconf):
	Create symlinks for files removed to be regenerated by configure.
	(__pkg_diff): Ignore SlackBuild and .png files.

	* CYGWIN-PATCHES/README:
	* lib/Makefile.am:
	* lib/xfce4.cygclass: New cygclass for Xfce 4.4.

	* lib/qt3.cygclass: Add QBINDIR to PATH.

	* bin/cygport.in: Accept RESTRICT.
	(__prepstrip): Skip if RESTRICT=strip.

	* CYGWIN-PATCHES/README:
	* bin/cygport.in (__src_fetch):
	* lib/Makefile.am:
	* lib/bzr.cygclass: New cygclass for Bazaar-VCS checkout packages.

	* lib/apache.cygclass (doapachemod): New command.
	* lib/gtkmm.cygclass: Ignore MSVC_Net2003 during diff.
	* lib/java.cygclass: Define JAVA_HOME.

	* lib/mono.cygclass (mono_wrapper): Allow full path to wrapper.

	* bin/cygport.in (cygpatch): Accept {g,bz}ipped patches.
	(cygconf): Remove files in S that will be recreated by configure in B.
	(__prepstrip): Don't 'chmod +x' .NET assemblies.
	(__pkg_diff): Ignore .spec files.

	* lib/python.cygclass: Provide default HOMEPAGE and SRC_URI at cheeseshop.
	(python_optimize) Inform of action instead of showing output.

	* data/mirrors (mirror_mplayer): Added.

	* lib/cvs.cygclass:
	* lib/git.cygclass:
	* lib/svn.cygclass: Redefine, not append, SRC_URI.
	(svn_fetch): Ignore .cvsignore files found in cvs2svn repos.

	* bin/cygport.in: Index mutable, public, and private symbols in 
	each section. Added double-underscore prefix to some private functions.

	* bin/cygport.in:
	* lib/cvs.cygclass:
	* lib/git.cygclass:
	* lib/svn.cygclass:
	Reworked src_fetch and RCS_fetch to allow RCS and FTP/HTTP in SRC_URI.
	Renamed former to __src_fetch as private API.

	* CYGWIN-PATCHES/README:
	* lib/Makefile.am:
	* lib/zope.cygclass: New cygclass for Zope modular libraries.

	* lib/java.cygclass (dojar): Renamed command.
	(dojava): Alias to dojar.